fix: update install, load images

--- a/config/nginx/smartdb.conf
+++ b/config/nginx/smartdb.conf
@@ -7,6 +7,14 @@ upstream dbmanager {
     ip_hash;
     server smartdb_dbmanager;
 }
+upstream dbgatexweb {
+    ip_hash;
+    server smartdb_dbgatex_web;
+}
+upstream dbgatexserver {
+    ip_hash;
+    server smartdb_dbgatex_server:3000;
+}
 
 server {
     listen       443 ssl;
@@ -54,15 +62,26 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /dbgatex/ {
-        proxy_pass http://smartdb_dbgatex_web;
+    location /dbgatex/api/terminal {
+      proxy_pass http://dbgatexserver/terminal;
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /dbgatex/api/ {
+        proxy_pass http://dbgatexserver/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /dbgatex/api/ {
-        proxy_pass http://smartdb_dbgatex_server;
+    location /dbgatex/ {
+        proxy_pass http://dbgatexweb;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
