--- a/yml/nginx.yml
+++ b/yml/nginx.yml
@@ -1,7 +1,7 @@
 services:
   lb:
     # image: ${REGISTRY:-docker.io}/library/nginx:1.25.3-alpine3.18
-    image: library/nginx:1.25.3-alpine3.18
+    image: nginx:1.25.3-alpine3.18
     ports:
       - "${HTTP_PORT:-80}:${HTTP_PORT:-80}"
       - "${HTTPS_PORT:-443}:${HTTPS_PORT:-443}"
