--- a/global.env
+++ b/global.env
@@ -1,8 +1,8 @@
 # Component version
-export VERSION=v1.0.0-ce
+export VERSION=
 
 # Environment variables
 export REGISTRY="registry.dataleapinfo.com:8443"
-export GLOBAL_CONFIG_DIR=/home/zabbix/opt/smartdb/config
+export GLOBAL_CONFIG_DIR=/opt/smartdb/config
 export COPYRIGHT="Copyright (c) 2025 DataLeap Info Tech Co., Ltd. All rights reserved."
 
