--- a/global.env
+++ b/global.env
@@ -1,8 +1,6 @@
 # Component version
 export VERSION=
 
-# Environment variables
-export REGISTRY="registry.dataleapinfo.com:8443"
+# Config variable
 export GLOBAL_CONFIG_DIR=/opt/smartdb/config
-export COPYRIGHT="Copyright (c) 2025 DataLeap Info Tech Co., Ltd. All rights reserved."
 
