feat: publish v1.1.0-ce

--- a/config/nginx/smartdb.conf
+++ b/config/nginx/smartdb.conf
@@ -1,7 +1,7 @@
 # db
 upstream smartdbadmin {
     ip_hash;
-    server smartdb_admin:8084;
+    server smartdata_admin:8084;
 }
 upstream dbmanager {
     ip_hash;
