--- a/yml/dbgatex-server.yml
+++ b/yml/dbgatex-server.yml
@@ -9,7 +9,7 @@ services:
       - TZ=${TZ:-Asia/Shanghai}
       - NODE_ENV=production_self
       - ENABLE_ONLINE=1
-      - ONLINE_ADMIN_API=http://smartdb_admin:8084/
+      - ONLINE_ADMIN_API=http://smartdata_admin:8084
       - ONLINE_ADMIN_HOME=/db
       # database
       - DB_HOST=${DB_HOST}
