fix: update port for nginx config; publish v1.1.0-ce

--- a/config/nginx/smartdb.conf
+++ b/config/nginx/smartdb.conf
@@ -37,7 +37,7 @@ server {
 
     # mqtt service 
     location /mqtt {
-	      proxy_pass http://smartdb_mqtt/mqtt;
+	      proxy_pass http://smartdb_mqtt:8083/mqtt;
         proxy_redirect off;
 	      proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
