--- a/example.env
+++ b/example.env
@@ -8,8 +8,8 @@
 ################# HTTP Configuration ###########################
 # 
 # The sevice port provided to the outside
-#
-HTTP_PORT=80
+# Default disabled
+# HTTP_PORT=80
 
 ################# HTTPS Configuration ###########################
 # 
