feat: update port

--- a/config/nginx/smartdb.conf
+++ b/config/nginx/smartdb.conf
@@ -17,7 +17,7 @@ upstream dbgatexserver {
 }
 
 server {
-    listen       443 ssl;
+    listen      HTTPS_PORT ssl;
     # server_name demo.smartdb.com; # for demo
 
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -94,22 +94,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
     location / {
-        proxy_pass http://dbmanager;
-        proxy_set_header Host $host:$server_port;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Port $server_port;
-    } 
+        return 301 /db$request_uri;
+    }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
 }
 server {
-    listen 80;
+    listen HTTP_PORT;
     # listen [::]:80;
     # server_name demo.smartdb.com; # for demo
     location /.well-known/ {
@@ -117,6 +111,6 @@ server {
     }
  
     location / {
-      return 307 https://$server_name$request_uri;
+        return 301 https://$host:$server_port/db$request_uri;
     }
 }
