--- a/yml/nginx.yml
+++ b/yml/nginx.yml
@@ -3,8 +3,8 @@ services:
     image: nginx:1.25.3-alpine3.18
     container_name: smartdb_lb
     ports:
-      - "${HTTP_PORT:-80}:80"
-      - "${HTTPS_PORT:-443}:443"
+      - "${HTTP_PORT:-80}:${HTTP_PORT:-80}"
+      - "${HTTPS_PORT:-443}:${HTTPS_PORT:-443}"
     networks:
       - smartdb
     # extra_hosts:
