fix: update nginx config

--- a/config/nginx/smartdb.conf
+++ b/config/nginx/smartdb.conf
@@ -111,6 +111,6 @@ server {
     }
  
     location / {
-        return 301 https://$host:$server_port/db$request_uri;
+        return 301 https://$host:HTTPS_PORT/db$request_uri;
     }
 }
