feat(script): add upgrade feature; update sql move smartdb-admin

--- a/global.env
+++ b/global.env
@@ -1,6 +1,6 @@
 # Component version
-export VERSION=
+export VERSION=v1.0.0-ce-beta2
 
 # Config variable
-export GLOBAL_CONFIG_DIR=/opt/smartdb/config
+export GLOBAL_CONFIG_DIR=/home/zabbix/opt/smartdb/config
 
