feat: add upgrade; update project name

--- a/before_install.env
+++ b/before_install.env
@@ -1,9 +1,8 @@
-# SmartDB installation configuration file example.
+# dbagent installation configuration file example.
 #
 # If you don't understand the prupose, you can skip modify this file.
 # the system will automatically fill in Complete parameter documentation
-# https://docs.dataleapinfo.com/smartdb/v1/guide/env
-#
+# https://dataleapinfo.github.io/dbagent-doc/intro/
 
 ################# HTTP Configuration ###########################
 # 
@@ -19,9 +18,9 @@ HTTPS_PORT=443
 
 ################# Installation Configuration ###########################
 # 
-# SmartDB database persistence directory
+# dbagent database persistence directory
 #
-VOLUME_DIR=/opt/smartdb
+VOLUME_DIR=/opt/dbagent
 USE_IPV6=0
 DOCKER_SUBNET_IPV6=fc00:1010:1111:200::/64
 
