--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -5,20 +5,20 @@ upstream smartdbadmin {
 }
 upstream dbmanager {
     ip_hash;
-    server smartdb_dbmanager;
+    server dbagent_dbmanager;
 }
 upstream dbgatexweb {
     ip_hash;
-    server smartdb_dbgatex_web;
+    server dbagent_dbgatex_web;
 }
 upstream dbgatexserver {
     ip_hash;
-    server smartdb_dbgatex_server:3000;
+    server dbagent_dbgatex_server:3000;
 }
 
 server {
     listen      HTTPS_PORT ssl;
-    # server_name demo.smartdb.com; # for demo
+    # server_name demo.dbagent.com; # for demo
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -37,7 +37,7 @@ server {
 
     # mqtt service 
     location /mqtt {
-	      proxy_pass http://smartdb_mqtt:8083/mqtt;
+	      proxy_pass http://dbagent_mqtt:8083/mqtt;
         proxy_redirect off;
 	      proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -105,7 +105,7 @@ server {
 server {
     listen HTTP_PORT;
     # listen [::]:80;
-    # server_name demo.smartdb.com; # for demo
+    # server_name demo.dbagent.com; # for demo
     location /.well-known/ {
         proxy_pass http://dbmanager;
     }
