--- a/yml/dbgatex-web.yml
+++ b/yml/dbgatex-web.yml
@@ -1,10 +1,10 @@
 services:
   dbgatex_web:
     image: smartdb/dbgatex-web:${VERSION}
-    container_name: smartdb_dbgatex_web
+    container_name: dbagent_dbgatex_web
     restart: always
     networks:
-      - smartdb
+      - dbagent
     environment:
       - TZ=${TZ:-Asia/Shanghai}
     healthcheck:
@@ -14,5 +14,5 @@ services:
       retries: 3
       start_period: 10s
 networks:
-  smartdb:
+  dbagent:
     external: true
