--- a/yml/nginx.yml
+++ b/yml/nginx.yml
@@ -1,19 +1,19 @@
 services:
   lb:
     image: nginx:1.25.3-alpine3.18
-    container_name: smartdb_lb
+    container_name: dbagent_lb
     ports:
       - "${HTTP_PORT:-80}:${HTTP_PORT:-80}"
       - "${HTTPS_PORT:-443}:${HTTPS_PORT:-443}"
     networks:
-      - smartdb
+      - dbagent
     # extra_hosts:
     #   - "HOST_DOMAIN:${NGINX_HOST_DOMAIN}"
     environment:
       - TZ=${TZ:-Asia/Shanghai}
     volumes:
       - ${VOLUME_DIR}/nginx/data/log:/var/log/nginx
-      - ${CONFIG_DIR}/nginx/smartdb.conf:/etc/nginx/conf.d/smartdb.conf
+      - ${CONFIG_DIR}/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ${CONFIG_DIR}/nginx/ssl:/etc/nginx/ssl
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
@@ -22,5 +22,5 @@ services:
       retries: 3
       start_period: 10s
 networks:
-  smartdb:
+  dbagent:
     external: true
