--- a/build-ee/version.env
+++ b/build-ee/version.env
@@ -1,7 +1,6 @@
 # 指定要发布的版本
-# v1.0.0-ce, v1.1.0-ce
-# export VERSION=v1.0.0-ce
-export VERSION=v1.1.0-ce
+# v1.0.0-ee, v1.1.0-ee
+export VERSION=v1.0.0-ee
 
 # internal registry
 export REGISTRY="registry.dataleapinfo.com:8443"
@@ -10,10 +9,10 @@ export PUBLISH_ALIYUN_REGISTRY="registry.cn-hangzhou.aliyuncs.com"
 
 # 指定要下载的镜像
 # 3361b70-20250314140143-74
-export IMAGE_DBMANAGER_VERSION=smartdb/dbmanager:401597f-202505121542-108
+export IMAGE_DBMANAGER_VERSION=smartdb/dbmanager:38e0022-202504141629-106
 export IMAGE_SMARTDATA_ADMIN_VERSION=smartdb/smartdata-admin:5a3a3dc-202504250944-24
-export IMAGE_DBGATE_SERVER_VERSION=smartdb/dbgatex-server:425ea576-202505121356-77
-export IMAGE_DBGATE_WEB_VERSION=smartdb/dbgatex-web:f32286ea-202505121431-45
+export IMAGE_DBGATE_SERVER_VERSION=smartdb/dbgatex-server:b7517d7d-202504141647-1
+export IMAGE_DBGATE_WEB_VERSION=smartdb/dbgatex-web:b7517d7d-202504141650-2
 
 # 公共镜像
 export IMAGE_REDIS_VERSION=library/redis:7.2-alpine3.18
