feat: add ee; publish v1.1.0-ee

--- a/build-ee/Jenkinsfile
+++ b/build-ee/Jenkinsfile
@@ -1,6 +1,6 @@
 def registryUrl="https://registry.cn-hangzhou.aliyuncs.com"
 def registryCredentialId="aliyuncs"
-def allowedBranches=["refs/heads/master"]
+def allowedBranches=["refs/heads/master-ee"]
 
 pipeline {
   agent {
