--- a/build-ee/Jenkinsfile
+++ b/build-ee/Jenkinsfile
@@ -1,6 +1,6 @@
 def registryUrl="https://registry.cn-hangzhou.aliyuncs.com"
 def registryCredentialId="aliyuncs"
-def allowedBranches=["refs/heads/master-ee"]
+def allowedBranches=["refs/heads/ee"]
 
 pipeline {
   agent {
@@ -13,7 +13,6 @@ pipeline {
     stage('Check Branch') {
       steps {
         script {
-          echo "commitId: ${env.BRANCH_NAME}"
 			    def tokenCredential
           withCredentials([string(credentialsId: 'smartdb-installer', variable: 'WEBHOOK_TOKEN')]) {
               tokenCredential = env.WEBHOOK_TOKEN
@@ -28,7 +27,8 @@ pipeline {
                   )
               ])
           ])
-			    echo "BRANCH_NAME: ${env.BRANCH_NAME}"
+			    echo "Commit branch: ${env.BRANCH_NAME}"
+          echo "Allowed Branches: ${allowedBranches}"
           if (!allowedBranches.contains(env.BRANCH_NAME)) {
             echo "Skipping build."
             currentBuild.result = 'ABORTED'
