--- a/yml/init-db.yml
+++ b/yml/init-db.yml
@@ -39,7 +39,7 @@ services:
       - APP_DOMAIN=${DB_URL:-}
       - APP_TITLE=${DB_APP_TITLE:-}
       - APP_SHORT_TITLE=${DB_APP_SHORT_TITLE:-}
-      # - CID=${UNIQUE_ID}
+      - CID=${UNIQUE_ID}
       - JUMPER_URL=http://dbgatex_server:3000/terminals/exec
       - flyway_locations=db/freeVer
     volumes:
